# pireal

./: .flake8  .gitignore  .pre-commit-config.yaml  .pycodestyle  .travis.yml  404.html  Dockerfile.docs  Makefile  README.md  README.rst  __README.rst  _config.yml  appveyor.yml  clean_pycache.sh  compose.docs.yml  config  contributors.txt  index.html  index.html.save  index.md  interpreter.py  main.py  make_deb.sh  mkdocs.yml  nano.save  pireal  pireal.desktop  pireal.nja  pireal.py  pireal_translations.ts  pyproject.toml  pyproject.toml.bak  pytest.ini  rdb_to_pdb  release.sh  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run-tests.py  (+5 more)
.github/workflows/: ci.yml  cicd.yml  main.yml  pythonpackage.yml  test-linux.yml  test-windows.yml
.sass-cache/0875600daf327069b7b9911910ca49a9a082ff94/: dark.scssc
.sass-cache/11c7cfbc7110df44a2d5f58d9af3898112c8c1a9/: _functions.scssc  _variables.scssc  support.scssc
.sass-cache/9bc10da6185c7d2ad623c559467e91701f1ee368/: normalize.scssc
.sass-cache/9f2537821f919cd81964b1e561d189c6c739fca3/: custom.scssc
.sass-cache/a9750187253a355ffa880e1f7bb5cf6ec4f96204/: _colors.scssc  _layout.scssc  _lists.scssc  _spacing.scssc  _typography.scssc  utilities.scssc
.sass-cache/db4b548004da2048dd654b2b70208e18f6a2bfe0/: base.scssc  buttons.scssc  code.scssc  content.scssc  labels.scssc  layout.scssc  navigation.scssc  overrides.scssc  search.scssc  tables.scssc  typography.scssc
.sass-cache/ebaef3ce9cb723255435946ff4188aaf594d5567/: _buttons.scssc  _layout.scssc  _typography.scssc  mixins.scssc
__tests/: test_file_manager.py
_includes/: head.html
_layouts/: default.html
_sass/: overrides.scss
_sass/custom/: custom.scss
_site/: 404.html  index.html
_site/docs/: ui-components.html  utilities.html
assets/css/: just-the-docs.scss
build_pireal/: freeze.py
debian/: changelog  control  copyright  pireal.install  rules
docs/: _index.en.md  _index.md  configuration.md  contributing.en.md  contributing.es.md  contributing.md  customization.md  getting-started.en.md  getting-started.md  index-test.md  index.en.md  index.md  navigation-structure.md  search.md
docs/hooks/: version.py
docs/internals/: interpreter.en.md  interpreter.es.md  interpreter.md  themes.en.md  themes.es.md  themes.md
docs/javascripts/: download.js
docs/relational-algebra/: examples.en.md  examples.es.md  examples.md  operators.en.md  operators.es.md  operators.md
docs/stylesheets/: custom.css  home.css
docs/ui-components/: buttons.md  code.md  labels.md  lists.md  tables.md  typography.md  ui-components.md
docs/user-guide/: databases.en.md  databases.es.md  databases.md  queries.end.md  queries.es.md  queries.md
docs/utilities/: color.md  layout.md  responsive-modifiers.md  typography.md  utilities.md
man/: pireal.1
overrides/: home.html
pireal/: __init__.py  dirs.py  keymap.py  main.py  resources.py  resources.qrc  settings.py  style.py  translations.py  utils.py
pireal/core/: cliparser.py  config.py  db.py  db_utils.py  file_manager.py  file_utils.py  logger.py  ordered_set.py  pfile.py  relation.py  rtypes.py  settings.py
pireal/gui/: __init__.py  central_view.py  central_widget.py  database_container.py  database_panel.py  delegate.py  editor.py  lateral_widget.py  main.py  main_panel.py  main_window.py  menu_actions.py  model.py  model_view_delegate.py  notification.py  overlay_widget.py  rdb_pdb_tool.py  relation_widget.py  start_page.py  status_bar.py  table_widget.py  theme.py  updater.py  view.py  widgets.py
pireal/interpreter/: __init__.py  lexer.py  parser.py  rast.py  scanner.py  tokens.py  utils.py
pireal/resources/: resources.qrc
samples/: consulta.pqf  consulta_v2.pqf  nac.txt  persona.csv  queries.pqf  skills.prf
scripts/: build.py  rdb_to_pdb  run_editor.py  stats
search/: search_index.json
src/: __init__.py  keymap.py  resources.py  resources.qrc  style.py  style.qss  translations.py
src/core/: cliparser.py  file_manager.py  logger.py  operators.py  parser.py  pfile.py  relation.py  rfile.py  rtypes.py  settings.py  settings_old.py
src/docs/: Makefile  api.rst  conf.py  index.rst  make.bat  src.core.rst  src.gui.query_editor.rst
src/gui/: StartPage.qml  __init__.py  _container.py  about_dialog.py  actions.py  central_widget.py  container.py  custom_table.py  database_container.py  database_widget.py  delegate.py  fader_widget.py  lateral_widget.py  list_widget.py  main_container.py  main_window.py  mdi_area.py  menu_actions.py  message_error.py  model.py  new_relation_dialog.py  notification.py  overlay_widget.py  qml_interface.py  rdb_pdb_tool.py  start_page.py  status_bar.py  style.qss  table.py  table_model.py  table_widget.py  update.py  updater.py  updates.py  view.py
src/lang/: Spanish.qm
src/pireal/: __init__.py  app.py  dirs.py  helpers.py  keymap.py  main.py  registry.py  resources.py  settings.py  theme.py  translations.py  utils.py
tests/: __init__.py  _test_file_manager.py  conftest.py  helpers.py  relation.py  test_cli.py  test_db.py  test_db_utils.py  test_file.py  test_file_manager.py  test_file_object.py  test_file_utils.py  test_integration.py  test_lexer.py  test_ordered_set.py  test_parser.py  test_relation.py  test_rtypes.py  test_scanner.py  test_types.py
tests/gui/: _test_new_relation_dialog.py  _test_table_widget.py  conftest.py  test_central_widget.py  test_database_panel.py  test_editor.py  test_editor_widget.py  test_main_panel.py  test_model.py  test_new_database_dialog.py  test_new_relation_dialog.py  test_query_container.py  test_query_widget.py  test_relation_widget.py  test_search_widget.py  test_table_widget.py
tests/integration/: test_dummy.py  test_integration.py  test_interpreter.py  test_pipeline.py  test_with_gui.py  test_without_gui.py
tests/interpreter/: test_interpreter.py  test_lexer.py  test_parser.py  test_scanner.py  utils.py
tests/unit/: test_ast.py  test_cli.py  test_cli_session.py  test_db.py  test_evaluator.py  test_file_manager.py  utils.py  (+15 more)
windows/: deploy.py  freeze_pireal.py  install_script.nsi  pireal.spec
(+229 files in other folders)
