[project]
name = "pireal"
version = "4.0"
description = "Relational Algebra Interpreter"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "COPYING" }
authors = [{ name = "Gabriel Acosta", email = "acostadariogabriel@gmail.com" }]
maintainers = [
        { name = "Gabriel Acosta", email = "acostadariogabriel@gmail.com" },
]
classifiers = [
        "Environment :: X11 Applications",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Topic :: Education",
        "Topic :: Utilities",
]
dependencies = [
    "packaging>=24.1",
    "pyqt6>=6.7.1",
]

[project.scripts]
pireal = "pireal.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
exclude = ["windows/*", "tests/*"]

[tool.uv]
dev-dependencies = [
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "ruff>=0.6.7",
]
