[project]
name = "pireal"
dynamic = ["version"]
description = "Relational Algebra Interpreter"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "COPYING"}
authors = [
    {name = "Gabriel Acosta", email = "acostadariogabriel@gmail.com"}
]
maintainers = [
        { name = "Gabriel Acosta", email = "acostadariogabriel@gmail.com" },
]
classifiers = [
        "Environment :: X11 Applications",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Topic :: Education",
        "Topic :: Utilities",
]
dependencies = [
    "packaging>=24.2",
    "pyqt6>=6.8.1",
    "structlog>=25.4.0",
]

[project.scripts]
pireal = "pireal.main:run"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
path = "pireal/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pireal"]

[tool.ruff.lint]
exclude = ["windows/*", "tests/*"]

[dependency-groups]
dev = [
    "hatch-vcs>=0.4.0",
    "hatchling>=1.27.0",
    "ipython>=9.3.0",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
markers = [
    "interpreter: mark a test as a interpreter."
]
