[metadata]
name = pireal
version = file: version.txt
description = Relational Algebra Interpreter
long_description = file: README.md
author = Gabriel Acosta
author_email = acostadariogabriel at gmail
url = https://centaurialpha.github.io/pireal
license = GPLv3+
classifiers =
    Environment :: X11 Applications
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Education
    Topic :: Utilities


[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    pyqt5

[options.packages.find]
where = src

[options.package_data]
pireal = resources/samples/*, resources/images/pireal_icon.png

[options.extras_require]
test = flake8; pycodestyle; pytest; pytest-cov
dev = ipython
