[metadata]
name = pireal
version = file: version.txt
description = Relational Algebra Interpreter
long_description = file: README.md
long_description_content_type = text/markdown
author = Gabriel Acosta
author_email = acostadariogabriel@gmail.com
url = https://centaurialpha.github.io/pireal
project_urls =
    Bug Tracker = https://github.com/centaurialpha/pireal/issues
license = GPLv3+
classifiers =
    Environment :: X11 Applications
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Education
    Topic :: Utilities


[options]
packages = find:
package_dir =
    =src
include_package_data = True
scripts =
    bin/pireal
install_requires =
    PyQt5>=5.15

[options.packages.find]
where = src

[options.package_data]
pireal = resources/samples/*, resources/images/pireal_icon.png

[options.extras_require]
test = flake8; pycodestyle; pytest; pytest-cov
dev = ipython
