[metadata]
name = pireal
description = Relational Algebra Interpreter
long_description = file: README.md
long_description_content_type = text/markdown
author = Gabriel Acosta
author_email = acostadariogabriel@gmail.com
url = https://centaurialpha.github.io/pireal
project_urls =
    Bug Tracker = https://github.com/centaurialpha/pireal/issues
license = GPLv3+
classifiers =
    Environment :: X11 Applications
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Education
    Topic :: Utilities

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    PyQt6

[options.entry_points]
gui_scripts =
    pireal = pireal.main:run

[options.packages.find]
where = src

# [options.package_data]
# pireal = resources/samples/*, resources/images/pireal_icon.png

[options.extras_require]
dev = flake8; black; pytest; pytest-cov
